--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -299,7 +299,40 @@ main{
     .imgCard{
         display: none;
     }
+
+    .butCopy{
+        position: inherit;
+        width: 100%;
+    }
+
+    .textout{
+        width: 100%;
+        height: 210px;
+        padding: 10px;
+    }
+
 }
 
-/* @media(max-width:) */
+@media(max-width: 720px){
+    header .log{
+        width: 100%;
+        background: var(--Color1);
+        padding: 2px;
+    }
+
+    .textin{
+        width: 90%;
+        font-size: 24px;
+    }
+
+    .encripButton{
+        display: grid;
+        gap: 21px;
+    }
+
+    .out{
+        width: 90%;
+    }
+    
+}
 
